--- a/index.css
+++ b/index.css
@@ -1,12 +1,15 @@
-/* * {
-    border:1px solid green;
-}*/
+
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
 .first-section {
     display: flex;
+    flex: 1;
     flex-direction: column;
     background-color: #1f2937;
-    padding: 10px 100px;
+    padding: 20px 100px 40px 100px;
     gap: 40px;
 }
 
@@ -37,8 +40,9 @@ a {
 
 .subheader {
     display: flex;
+    flex: 1;
     justify-content: center;
-    gap: 200px;
+    gap: 270px;
     padding: 10px;
 }
 
@@ -68,6 +72,83 @@ button {
     color: #f9faf8
 }
 
-.image1 img {
+.image1 img,
+.boxes img {
     border-radius: 30px;
+}
+
+.second-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 200px 40px 200px;
+    gap: 50px;
+}
+
+.boxes {
+    display: flex;
+    text-align: center;
+}
+
+.info {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+
+.box.text {
+    padding: 10px;
+    color: #1f2937;
+    font-size: 18px;
+}
+
+.third-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #e5e7eb;
+    padding: 200px;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+}
+
+.name {
+    align-self: flex-end;
+}
+
+.fourth-section {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding: 70px 100px;
+}
+
+.blue-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 200px;
+    padding: 30px 70px;
+    border-radius: 20px;
+    background-color: #3882f6;
+    color:#f9faf8;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+}
+.line {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.bottom-button {
+    border: 2px solid #f9faf8;
+    border-radius: 20px;
+    padding: 5px 15px;
 }
